--- a/doc/desarrollo-ecj.tex
+++ b/doc/desarrollo-ecj.tex
@@ -1,6 +1,6 @@
-Las personas que se dedican a la investigación han apreciado desde siempre disponer de herramientas que faciliten la tarea de la investigación e implementen los algoritmos que necesitan utilizar. En este sentido surgen numerosas herramientas en el campo de la computación evolutiva, una bien conocida por la comunidad es ECJ. Esta herramienta ha sido llevada a cabo por el departamento de ciencias de la computación de la universidad de George Mason, US y ahora mismo se encuentra en su versi\'on 22.
+Las personas que se dedican a la investigaci\'on han apreciado desde siempre disponer de herramientas que faciliten su tarea e implementen los algoritmos que necesitan utilizar. En este sentido surgen numerosas herramientas en el campo de la computación evolutiva, una bien conocida por la comunidad es ECJ. Esta herramienta ha sido llevada a cabo por el departamento de ciencias de la computación de la universidad de George Mason, US y ahora mismo se encuentra en su versi\'on 22.
 
-Esta herramienta ha sido concebida para proporcionar una amplia flexibilidad que permita albergar numerosos tipos de problemas. Adem\'as, persiguiendo este mismo objetivo, ha sido desarrollada en el lenguaje de programación Java, lo que permite que pueda ser ejecutada en cualquier sistema operativo tanto Windows como Linux.
+Esta herramienta ha sido concebida para proporcionar una amplia flexibilidad que permita albergar numerosos tipos de problemas. Adem\'as, persiguiendo este mismo objetivo, ha sido desarrollada en el lenguaje de programación Java, lo que permite que pueda ser ejecutada en cualquier sistema operativo y arquitectura.
 
 Algunas de sus características m\'as importantes y por las cuales ha adquirido la popularidad que posee son las siguientes:
 
