--- a/doc/desarrollo-introduccion.tex
+++ b/doc/desarrollo-introduccion.tex
@@ -1,1 +1,1 @@
-En te cap\'itulo se describir\'a el desarrollo del proyecto, el cual ha consistido en primer lugar en analizar las dos herramientas que se integraran, ECJ y Hadoop, con el objetivo de conocerlas en profundidad y as\'i poder integrarlas de la mejor manera posible. Una vez analizadas ambas, se explicar\'a el procedimiento llevado a cabo para su integración y finalmente los resultados obtenidos al ejecutar la evaluación de los individuos haciendo uso de Hadoop.
+En este cap\'itulo se describir\'a el desarrollo del proyecto, el cual ha consistido en primer lugar en analizar las dos herramientas que se integraran, ECJ y Hadoop, con el objetivo de conocerlas en profundidad y as\'i poder integrarlas de la mejor manera posible. Una vez analizadas ambas, se explicar\'a el procedimiento llevado a cabo para su integración y finalmente los resultados obtenidos al ejecutar la evaluación de los individuos haciendo uso de Hadoop.
