--- a/doc/main.tex
+++ b/doc/main.tex
@@ -64,7 +64,7 @@
 		\input{desarrollo-paralelizacion.tex}
 	\section{Implementaci\'on}
 		\input{desarrollo-implementacion.tex}
-	\section{Mejoras introducidas}
+	\section{Mejoras introducidas}\label{desarrollo-problema-mejoras}
 		\input{desarrollo-problema-mejoras.tex}
 	\section{Despliegue de problemas utilizando la integraci\'on}
 		\input{desarrollo-problemas-introduccion.tex}
