--- a/doc/manual-ejecucion.tex
+++ b/doc/manual-ejecucion.tex
@@ -4,7 +4,7 @@ Al igual que en los casos anteriores, tenemos dos escenarios posibles, uno es ut
 
 Para ejecutar uno de los tutoriales que incluye la distribucion de ECJ debemos indicar en los argumentos: ''-file src/main/java/ec/app/tutorial1/tutorial1.params'', pulsamos sobre el bot\'on ''Run'' y se iniciar\'a la ejecuci\'on del tutorial n\'umero 1, el problema MaxOne.
 
-Sin embargo, el uso de un entorno de desarrollo para la ejecui\'on de los problemas incluidos no es necesario, podemos ejecutarlo directamente desde la consola teniendo instalado Java en el sistema (versi\'on 1.6 o superior). Para ello abrimos una consola y nos dirigimos al directorio donde se encuentra el proyecto, una vez hecho esto podemos ejecutarlo con el siguiente comando:
+Sin embargo, el uso de un entorno de desarrollo para la ejecuci\'on de los problemas incluidos no es necesario, podemos ejecutarlo directamente desde la consola teniendo instalado Java en el sistema (versi\'on 1.6 o superior). Para ello abrimos una consola y nos dirigimos al directorio donde se encuentra el proyecto, una vez hecho esto podemos ejecutarlo con el siguiente comando:
 
 \mostrarconsola{
 	\$java ec.Evolve -file src/main/java/ec/app/tutorial1/tutorial1.params
