--- a/doc/organizacion-documento.tex
+++ b/doc/organizacion-documento.tex
@@ -2,7 +2,7 @@ El documento que se presenta ha sido dividido en siete cap\'itulos. El primero d
 
 En el segundo cap\'itulo \verapartado{analisis}, nos sumergimos en los dos campos de conocimiento que este trabajo contempla, algoritmos evolutivos y procesamiento masivo de informaci\'on, describiendolos con detalle.
 
-Pasamos en el siguiente cap\'itulo \verapartado{integracion} al estudio de las herramientas que se van a integrar, y explicar como se realiza la integraci\'on introduciendo algunos diagramas donde se entienda mejor la filosofía de la solución. Al final de este cap\'itulo se describen algunas mejoras introducidas y se muestran los resultados obtenidos de las ejecuciones llevadas a cabo utilizando la integraci\'on y sin utilizarla.
+Pasamos en el siguiente cap\'itulo \verapartado{integracion} al estudio de las herramientas que se van a integrar, y explicar c\'omo se realiza la integraci\'on introduciendo algunos diagramas donde se entienda mejor la filosofía de la solución. Al final de este cap\'itulo se describen algunas mejoras introducidas y se muestran los resultados obtenidos de las ejecuciones llevadas a cabo utilizando la integraci\'on y sin utilizarla.
 
 Un caso especial en el que desarrollamos una integraci\'on diferente se ve en el cap\'itulo cuarto \verapartado{facerecognition}, donde se desarrolla una implementaci\'on que utiliza un modelo diferente al del cap\'itulo anterior. En este cap\'itulo integramos un software de reconocimiento facial con ECJ y con Hadoop, haciendo uso de una librer\'ia de procesamiento de im\'agenes conocida por el nombre de OpenCV.
 
@@ -12,4 +12,4 @@ Durante la realizaci\'on del proyecto, y una vez finalizado, surgen ideas para m
 
 Como \'ultimo cap\'itulo \verapartado{conclusiones} se comentan las conclusiones a las que se ha llegado tras el \'analisis de los resultados obtenidos en los diversos problemas planteados, discutiendo cuando el uso de esta soluci\'on es apropiado y cuando no.
 
-Para finalizar el documento se ha incluido una bibliografía donde se enumeran las diferentes fuentes mencionadas a lo largo del documento. Se incluyen desde art\'iculos hasta p\'aginas webs de tutoriales pasando por algunas referencias a im\'agenes utilizadas.
+Para finalizar el documento se ha incluido una bibliografía donde se enumeran las diferentes fuentes mencionadas. Se incluyen desde art\'iculos hasta p\'aginas webs de tutoriales pasando por algunas referencias a im\'agenes utilizadas.
