--- a/doc/desarrollo-problema-parity.tex
+++ b/doc/desarrollo-problema-parity.tex
@@ -66,7 +66,7 @@ public class Parity extends GPProblem implements SimpleProblemForm {
 }
 \end{lstlisting}
 
-En primer lugar, en esta implementación se ejecuta el método setup el cual obtiene el parámetro del n\'umero de bits a utilizar en el problema y posteriormente se calcula lel n\'umero de combinaciones con ese n\'umero de bits. Respecto a la evaluación de los individuos en el método evaluate, en primer lugar se crea un objeto que representa el valor devuelto por la ejecuci'on del programa genético, posteriormente se recorren todos los valores posibles y por cada uno se calcula la paridad del valor y se ejecuta el programa gen\'etico, si ambos coinciden en el valor devuelto se incrementa el contador (sum). Finalmente se establece el fitness del individuo en funci\'on del n\'umero de aciertos.
+En primer lugar, en esta implementación se ejecuta el método setup el cual obtiene el parámetro del n\'umero de bits a utilizar en el problema y posteriormente se calcula el n\'umero de combinaciones con ese n\'umero de bits. Respecto a la evaluación de los individuos en el método evaluate, en primer lugar se crea un objeto que representa el valor devuelto por la ejecuci'on del programa genético, posteriormente se recorren todos los valores posibles y por cada uno se calcula la paridad del valor y se ejecuta el programa gen\'etico, si ambos coinciden en el valor devuelto se incrementa el contador (sum). Finalmente se establece el fitness del individuo en funci\'on del n\'umero de aciertos.
 
 Tras definir las dos clases anteriores, lo único que queda es el fichero de parámetros, el cual podemos nombrar parity.params y cuyo contenido puede ser el siguiente:
 
