--- a/doc/manual-obtencion.tex
+++ b/doc/manual-obtencion.tex
@@ -9,7 +9,7 @@ El repositorio est\'a localizado en la conocida p\'agina por los desarrolladores
 		\item Fuerte apoyo al desarrollo no lineal, por ende rapidez en la gestión de ramas y mezclado de diferentes versiones.
 		\item Gestión distribuida. Git le da a cada programador una copia local del historial del desarrollo entero, y los cambios se propagan entre los repositorios locales. 
 		\item Los almacenes de información pueden publicarse por HTTP, FTP, rsync o mediante un protocolo nativo, ya sea a través de una conexión TCP/IP simple o a través de cifrado SSH.				\item Los repositorios Subversion y svk se pueden usar directamente con git-svn.
-		\item Gestión eficiente de proyectos grandes.
+		\item Gestión eficiente de grandes proyectos.
 	\end{itemize}
 }
 
